add commit container functionality to dsagent image service
